src/test/run-pass/issue-954.rs
fn main() {
    log 3-2;
    assert 3-2 == 1;
}